# F1Tenth-Racing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
eiu_f1tenth/ros2_basic/: CMakeLists.txt  package.xml
eiu_f1tenth/ros2_basic/imu/: bno055_calibration.json  calib_imu.py  imu_calculation.py
f1tenth_automatic_emergency/: package.xml
f1tenth_automatic_emergency/lab2_safety/: f1_brake.py  safety_node.py
f1tenth_automatic_emergency/src/lab2_safety/: safety.cpp
f1tenth_controller/: CMakeLists.txt  package.xml
f1tenth_controller/scripts/pure_pursuit_controller/: pure_pursuit.py
f1tenth_drivers/bno055/bno055/: bno055.py
f1tenth_drivers/bno055_backup/launch/: bno055.launch.py
f1tenth_drivers/f1tenth_firmware/: CMakeLists.txt  package.xml
f1tenth_drivers/f1tenth_firmware/f1tenth_firmware/: blink_led.py
f1tenth_drivers/f1tenth_firmware/include/f1tenth_firmware/: LED.hpp
f1tenth_drivers/f1tenth_firmware/launch/: led.launch.py
f1tenth_drivers/f1tenth_firmware/src/: LED.cpp  blink_led.cpp  led_blink  main.cpp
f1tenth_drivers/urg_node2/config/: params_ether.yaml  params_serial.yaml
f1tenth_drivers/urg_node2/src/: urg_node2.cpp
f1tenth_global_planner/: package.xml
f1tenth_global_planner/include/f1tenth_planner/: local_dynamic_occ_grid.hpp
f1tenth_global_planner/scripts/rrt_planner/: rrt.py  treeViz.py  utils.py
f1tenth_global_planner/scripts/rrt_star_planner/: bresenham.py  cubic_spline.py  localPlanner_client.py  localPlanner_server.py  planner_utils.py  rrtStar_Spline.py  stanley_avoidance.py  test_code.py  test_local_planner.py  treeViz.py  utils.py
f1tenth_global_planner/src/: rrt.cpp  rrt_node.cpp
f1tenth_global_planner/src/dynamic_occ_gridmap/: main.cpp
f1tenth_perception/: CMakeLists.txt  package.xml
f1tenth_perception/f1tenth_detection/: __init__.py  object_coordinate.py  realsense_config.py  yolov7_objectDetection.py
f1tenth_perception/f1tenth_detection/Yolov7_ByteTracking/: class_name.yaml  track_direction.py  track_webcam.py
f1tenth_perception/f1tenth_detection/Yolov7_ByteTracking/Debug_Code/: Debug_code.ipynb
f1tenth_perception/f1tenth_detection/Yolov7_ByteTracking/Debug_Code/.ipynb_checkpoints/: Debug_code-checkpoint.ipynb
f1tenth_perception/f1tenth_detection/Yolov7_ByteTracking/byte_tracker/: kalman_filter.py
f1tenth_perception/f1tenth_detection/Yolov7_ByteTracking/utils/: detections.py  general.py
f1tenth_perception/f1tenth_lidar_perception/: lidar_object_coordinates.py  mapping_with_known_poses.py
f1tenth_perception/f1tenth_perception/: main.py  object_marker_array.py  recoding.py  yoloDet.py
f1tenth_perception/f1tenth_perception/Yolov7_ByteTracking/algorithm/: object_detector.py
f1tenth_perception/f1tenth_perception/Yolov7_ByteTracking/byte_tracker/: __init__.py  base_track.py  matching.py
f1tenth_perception/launch/: object_coordinate.launch.py
f1tenth_planner/: CMakeLists.txt
f1tenth_planner/src/dynamic_occ_gridmap/: local_dynamic_occ_grid.cpp
f1tenth_ros_basic/: CMakeLists.txt  package.xml
f1tenth_ros_basic/f1tenth_ros_basic/: safety_drive.py
f1tenth_system/f1tenth_mapping/: CMakeLists.txt  package.xml
f1tenth_system/f1tenth_mapping/config/: f1tenth_online_async.yaml  (+1 more)
f1tenth_system/f1tenth_msgs/: CMakeLists.txt  package.xml
f1tenth_system/f1tenth_stack/: CMakeLists.txt  package.xml
f1tenth_system/f1tenth_stack/config_base/: joy_teleop.yaml  mux.yaml  static_transform.yaml
f1tenth_system/f1tenth_stack/config_params/: ackermann_mux_locks.yaml  amcl_config.yaml  behavior.xml  bt_navigator.yaml  controller.yaml  info.txt  mux.yaml  planner_server.yaml  recovery.yaml  vesc.yaml  waypoint_follower.yaml
f1tenth_system/f1tenth_stack/f1tenth_stack/: initial_pose.py  throttle_interpolator.py
f1tenth_system/f1tenth_stack/launch/: base_setup.launch.py  bringup_system.launch.py  path_planner.launch.py  provide_map.launch.py  static_tf.launch.py
f1tenth_system/f1tenth_stack/launch/developing/: navigation.launch.py  path_planner.launch.py
f1tenth_system/f1tenth_stack/src/: initial_pose_pub.cpp
f1tenth_system/f1tenth_stack/visualize/: display_map.rviz  nav2_custom.rviz  rviz_display.rviz
f1tenth_system/vision_msgs/: CMakeLists.txt  package.xml
f1tenth_user_interface/: CMakeLists.txt  package.xml
f1tenth_user_interface/f1tenth_visualize/: visualize_marker_text.py
f1tenth_waypoint/: CMakeLists.txt  package.xml  plugin_description.xml
f1tenth_waypoint/config/: waypoint_params.yaml
f1tenth_waypoint/docs/: reading_string.cpp
f1tenth_waypoint/f1tenth_waypoint_follower/: initial_pose_pub.py  read_waypoint.py  waypoint_follower.py  waypoint_logger.py  waypoint_writer.py
f1tenth_waypoint/f1tenth_waypoint_generator/: __init__.py  waypoint_generator_node.py
f1tenth_waypoint/f1tenth_waypoint_generator/utils/: __init__.py  waypoint_utils.py
f1tenth_waypoint/f1tenth_waypoint_generator/waypoint_generation_options/: __init__.py  record_clicked_waypoints.py  record_odom_waypoints.py
f1tenth_waypoint/include/f1tenth_waypoint/: record_clicked_waypoints.hpp  record_odom_waypoints.hpp  waypoint_generator_node.hpp  waypoint_utils.hpp
f1tenth_waypoint/include/waypoint_plugin/: waypoint_panel.hpp
f1tenth_waypoint/include/waypoint_publisher/: waypoint_publisher.hpp
f1tenth_waypoint/launch/: waypoint_generation.launch.py
f1tenth_waypoint/racelines/: campusmap_path.csv  f1tenth_waypoint_path.csv
f1tenth_waypoint/rviz/: waypoint_visualization.rviz
f1tenth_waypoint/src/: waypoint_generator_node.cpp
f1tenth_waypoint/src/utils/: waypoint_utils.cpp
f1tenth_waypoint/src/waypoint_generator/: record_clicked_waypoints.cpp  record_odom_waypoints.cpp
f1tenth_waypoint/src/waypoint_plugin/: waypoint_panel.cpp
f1tenth_waypoint/src/waypoint_publisher/: waypoint_publisher.cpp
f1tenth_waypoint/waypoint/fablab_path/: f1tenth_waypoint_path.csv
f1tenth_waypoint/waypoint/openday_path/: f1tenth_waypoint_path.csv
f1tenth_waypoint/waypoint/outdoor_path/: f1tenth_waypoint_path.csv
include/f1tenth_automatic_emergency/: safety.hpp
scripts/: start_f1tenth.sh  visualize_f1tenth.rviz
(+19 files in other folders)
